Source/WebCore/dom/DOMImplementation.cpp
@@ -372,7 +372,8 @@ PassRefPtr<HTMLDocument> DOMImplementation::createHTMLDocument(const String& tit
     RefPtr<HTMLDocument> d = HTMLDocument::create(0, KURL());
     d->open();
     d->write("<!doctype html><html><body></body></html>");
-    d->setTitle(title);
+    if (!title.isNull())
+        d->setTitle(title);
     d->setSecurityOrigin(m_document->securityOrigin());
     d->setContextFeatures(m_document->contextFeatures());
     return d.release();
